# SummerUniversity2024

./: .gitignore  README.md
cuda/: README.md
cuda/practicals/diffusion/: job.batch  makefile
cuda/practicals/miniapp/: makefile
cuda/practicals/shared/: blur_twice.cu
cuda/reduction/: reduction.cu
cuda/solutions/axpy/: axpy.cu
cuda/solutions/octree/tree-ex1/: a.out  (+2 more)
cuda/solutions/octree/tree-ex2/: CMakeLists.txt  a.out  octree.cpp  octree.cu
cuda/solutions/octree/tree-ex2/tree/: octree.hpp  octree_gpu.cuh
cuda/solutions/octree/tree-ex2/util/: cuda_utils.hpp  random.hpp
cuda/solutions/reduction/: reduction.cu
cuda/solutions/shared/: string_reverse.cu
pyhpc/: README.md
pyhpc/cupy/: Cupy.ipynb  timers.py
pyhpc/dask/: 01-dask-intro.ipynb  02-exercise-cityblock-distance-matrix-scipy.dask.ipynb  03-dask-arrays.ipynb  04-dask-arrays-from-file.ipynb  05-dask-arrays-from-file-gpu.ipynb  06-dask-processes-vs-threads.ipynb  07-dask-distributed.ipynb  cupy_timer.py
pyhpc/jax/: README.md  jax_intro.ipynb
pyhpc/mpi/: 01-example-mpi4py.ipynb  osu_bw_cupy.py
pyhpc/numba/: 01-cityblock-distance-matrix-numba.jit.ipynb  02-cityblock-distance-matrix-numba.jit.ipynb  03-euclidean-distance-matrix-numba.jit.ipynb
pyhpc/numba/numba-cpu/: Numba_Cpu.ipynb  Numba_guvec.ipynb  Numba_stencil.ipynb
pyhpc/numba/numba-cuda/: 1.numba-cuda-basics.ipynb  2.performance-analysis.ipynb  3.memory-optimization.ipynb
pyhpc/numpy/: 01-numpy-array-internals.ipynb  02-broadcasting.ipynb  03-euclidean-distance-matrix-numpy.ipynb  04-euclidean-distance-matrix-numpy-advanced.ipynb
(+18 files in other folders)
